--- a/free-surface-paper.tex
+++ b/free-surface-paper.tex
@@ -1136,6 +1136,7 @@ This work was supported through National Science Foundation grant EAR-1246670
 and by the Computational Infrastructure in Geodynamics (CIG), through National Science Foundation grant EAR-0949446. 
 TH is partially supported by NSF grant DMS-1522191.
 Thanks to Wolfgang Bangerth, Brent Delbridge, and Cedric Thieulot for useful discussions.
+Thanks to Fabio Crameri and Dave May for constructive reviews.
 %% The Appendices part is started with the command \appendix;
 %% appendix sections are then done as normal sections
 %% \appendix
