--- a/response_to_referee.tex
+++ b/response_to_referee.tex
@@ -61,7 +61,7 @@ The results of this test are shown in Figure 2.
 
 Our second major addition is an investigation of the Rayleigh-Taylor instability with a free surface (Section 8.2),
 which was considered in Kaus et. al. (2010). We found that the QI and NSFD schemes are comparably
-accurate the same (adaptive chosen) timestep (with a slight advantage to QI). However, we have found
+accurate the same (adaptively chosen) timestep (with a slight advantage to QI). However, we have found
 that the NSFD scheme is able to take larger stable timesteps (though at the cost of lower accuracy).
 
 We have also used the Rayleigh-Taylor benchmark to investigate the effect of different choices of 
