Add image of RT benchmark.

--- a/free-surface-paper.tex
+++ b/free-surface-paper.tex
@@ -1046,7 +1046,7 @@ than quasi-implicit timestepping while remaining stable.
 
 \begin{figure*}
 \includegraphics[width=0.9\textwidth]{figures/rayleigh_taylor.pdf}
-\caption{Rayleigh-Taylor test. (a) Maximum depth of the drip. The blue line is the result using forward Euler (FE) integration of the free surface with a small 500 yr timestep, and is used as a reference solution. The symbols are for several different runs with different timestepping parameters, using both quasi-implicit (QI) and nonstandard finite difference (NSFD) schemes. As the timestepping gets smaller, both schemes converge to the reference solution (though from different directions).}
+\caption{Rayleigh-Taylor test. (a) Maximum depth of the drip. The blue line is the result using forward Euler (FE) integration of the free surface with a small 500 yr timestep, and is used as a reference solution. The symbols are for several different runs with different timestepping parameters, using both quasi-implicit (QI) and nonstandard finite difference (NSFD) schemes. As the timestepping gets smaller, both schemes converge to the reference solution (though from different directions). (b) Result of the small timestep forward Euler simulation after 5 Myr, including the adaptive mesh.}
 \label{fig:rayleigh_taylor}
 \end{figure*}
 
