Fix up references.

--- a/free-surface-paper.tex
+++ b/free-surface-paper.tex
@@ -1136,8 +1136,10 @@ gravity models. Furthermore, it runs in parallel and with adaptive mesh refineme
 This work was supported through National Science Foundation grant EAR-1246670
 and by the Computational Infrastructure in Geodynamics (CIG), through National Science Foundation grant EAR-0949446. 
 TH is partially supported by NSF grant DMS-1522191.
+Figures were created using the Python packages NumPy and Matplotlib.
 Thanks to Wolfgang Bangerth, Brent Delbridge, and Cedric Thieulot for useful discussions.
 Thanks to Fabio Crameri and Dave May for constructive reviews.
+
 %% The Appendices part is started with the command \appendix;
 %% appendix sections are then done as normal sections
 %% \appendix
@@ -1148,6 +1150,10 @@ Thanks to Fabio Crameri and Dave May for constructive reviews.
 %% If you have bibdatabase file and want bibtex to generate the
 %% bibitems, please use
 %%
+
+\nocite{hunter2007matplotlib}
+\nocite{vanderwalt2011numpy}
+
 \section*{Bibliography}
 \bibliographystyle{elsarticle-harv} 
 \bibliography{free-surface-paper}
