--- a/free-surface-paper.bib
+++ b/free-surface-paper.bib
@@ -1,5 +1,5 @@
 @article{fullsack1995arbitrary,
-  title={An arbitrary Lagrangian-Eulerian formulation for creeping flows and its application in tectonic models},
+  title={An arbitrary {L}agrangian-{E}ulerian formulation for creeping flows and its application in tectonic models},
   author={Fullsack, Philippe},
   journal={Geophysical Journal International},
   volume={120},
@@ -11,7 +11,7 @@
 
 @article{hillebrand2014using,
   author={Hillebrand, B. and Thieulot, C. and Geenen, T. and van den Berg, A. P. and Spakman, W.},
-  title={Using the level set method in geodynamical modeling of multi-material flows and Earth's free surface},
+  title={Using the level set method in geodynamical modeling of multi-material flows and {E}arth's free surface},
   journal={Solid Earth},
   volume={5},
   year={2014},
@@ -39,7 +39,7 @@
 }
 
 @article{popov2008slim3d,
-  title={SLIM3D: A tool for three-dimensional thermomechanical modeling of lithospheric deformation with elasto-visco-plastic rheology},
+  title={{S}{L}{I}{M}3{D}: A tool for three-dimensional thermomechanical modeling of lithospheric deformation with elasto-visco-plastic rheology},
   author={Popov, AA and Sobolev, SV},
   journal={Physics of the Earth and Planetary Interiors},
   volume={171},
@@ -98,7 +98,7 @@
 }
 
 @article{richards1984geoid,
-  title={Geoid anomalies in a dynamic Earth},
+  title={Geoid anomalies in a dynamic {E}arth},
   author={Richards, Mark A and Hager, Bradford H},
   journal={Journal of Geophysical Research},
   volume={89},
@@ -171,7 +171,7 @@
 }
 
 @article{thieulot2011fantom,
-  title={FANTOM: Two-and three-dimensional numerical modelling of creeping flows for the solution of geological problems},
+  title={{F}{A}{N}{T}{O}{M}: Two-and three-dimensional numerical modelling of creeping flows for the solution of geological problems},
   author={Thieulot, Cedric},
   journal={Physics of the Earth and Planetary Interiors},
   volume={188},
@@ -182,7 +182,7 @@
 }
 
 @article{ghosh1991arbitrary,
-  title={An arbitrary Lagrangian-Eulerian finite element method for large deformation analysis of elastic-viscoplastic solids},
+  title={An arbitrary {L}agrangian-{E}ulerian finite element method for large deformation analysis of elastic-viscoplastic solids},
   author={Ghosh, Somnath and Kikuchi, Noboru},
   journal={Computer Methods in Applied Mechanics and Engineering},
   volume={86},
@@ -202,7 +202,7 @@
 }
 
 @article{choi2013dynearthsol2d,
-  title={DynEarthSol2D: An efficient unstructured finite element method to study long-term tectonic deformation},
+  title={{D}yn{E}arth{S}ol2D: An efficient unstructured finite element method to study long-term tectonic deformation},
   author={Choi, E and Tan, E and Lavier, LL and Calo, Victor M},
   journal={Journal of Geophysical Research: Solid Earth},
   volume={118},
@@ -213,7 +213,7 @@
 }
 
 @article{furuichi2015implicit,
-  title={Implicit solution of the material transport in Stokes flow simulation: Toward thermal convection simulation surrounded by free surface},
+  title={Implicit solution of the material transport in {S}tokes flow simulation: Toward thermal convection simulation surrounded by free surface},
   author={Furuichi, Mikito and May, Dave A},
   journal={Computer Physics Communications},
   volume={192},
@@ -241,7 +241,7 @@
 }
 
 @misc{donea2004encyclopedia,
-  title={Encyclopedia of Computational Mechanics Vol. 1: Fundamentals., Chapter 14: Arbitrary Lagrangian-Eulerian Methods},
+  title={Encyclopedia of Computational Mechanics Vol. 1: Fundamentals., {C}hapter 14: Arbitrary {L}agrangian-{E}ulerian Methods},
   author={Donea, J and Huerta, Antonio and Ponthot, J-Ph and Rodriguez-Ferran, A},
   year={2004},
   publisher={Wiley \& Sons}
@@ -259,7 +259,7 @@
 }
 
 @article{burstedde2011p4est,
-  title={p4est: Scalable algorithms for parallel adaptive mesh refinement on forests of octrees},
+  title={p4est: {S}calable algorithms for parallel adaptive mesh refinement on forests of octrees},
   author={Burstedde, Carsten and Wilcox, Lucas C and Ghattas, Omar},
   journal={SIAM Journal on Scientific Computing},
   volume={33},
@@ -279,7 +279,7 @@
 }
 
 @book{schubert2001mantle,
-  title={Mantle Convection in the Earth and Planets 2 Volume Set},
+  title={Mantle Convection in the Earth and Planets},
   author={Schubert, Gerald and Turcotte, Donald L and Olson, Peter},
   year={2001},
   publisher={Cambridge University Press}
@@ -305,7 +305,7 @@
 }
 
 @article{zhong1996free,
-  title={Free-surface formulation of mantle convection—I. Basic theory and application to plumes},
+  title={Free-surface formulation of mantle convection-{I}. {B}asic theory and application to plumes},
   author={Zhong, Shijie and Gurnis, Michael and Moresi, Louis},
   journal={Geophysical Journal International},
   volume={127},
@@ -332,4 +332,32 @@
   volume={98},
   year={2007},
   publisher={Siam}
+}
+
+@ARTICLE{hunter2007matplotlib, 
+  author={J. D. Hunter}, 
+  journal={Computing in Science Engineering}, 
+  title={Matplotlib: A 2D Graphics Environment}, 
+  year={2007}, 
+  volume={9}, 
+  number={3}, 
+  pages={90-95}, 
+  keywords={computer graphics;mathematics computing;object-oriented programming;software packages;2D graphics package;Matplotlib;Python;application development;interactive scripting;operating system;publication-quality image generation;user interface;Computer languages;Equations;Graphical user interfaces;Graphics;Image generation;Interpolation;Operating systems;Packaging;Programming profession;User interfaces;Python;application development;scientific programming;scripting languages}, 
+  doi={10.1109/MCSE.2007.55}, 
+  ISSN={1521-9615}, 
+  month={May}
+}
+
+@ARTICLE{vanderwalt2011numpy, 
+  author={S. van der Walt and S. C. Colbert and G. Varoquaux}, 
+  journal={Computing in Science Engineering}, 
+  title={The {N}um{P}y Array: A Structure for Efficient Numerical Computation}, 
+  year={2011}, 
+  volume={13}, 
+  number={2}, 
+  pages={22-30}, 
+  keywords={data structures;high level languages;mathematics computing;numerical analysis;Python programming language;high level language;numerical computation;numerical data;numpy array;Arrays;Computational efficiency;Finite element methods;Numerical analysis;Performance evaluation;Resource management;Vector quantization;NumPy;Python;numerical computations;programming libraries;scientific programming}, 
+  doi={10.1109/MCSE.2011.37}, 
+  ISSN={1521-9615}, 
+  month={March}
 }
