Light edits to help with parsing

--- a/free-surface-paper.tex
+++ b/free-surface-paper.tex
@@ -158,6 +158,8 @@ Geodynamics
 
 \linenumbers
 
+%%BEGINCLIP
+
 %% main text
 \section{Introduction}
 \label{sec:intro}
@@ -1134,6 +1136,7 @@ scheme and the nonstandard finite difference scheme are available. The implement
 sufficiently general to accommodate many different geometries, rheologies, and 
 gravity models. Furthermore, it runs in parallel and with adaptive mesh refinement.
 
+%%ENDCLIP
 
 \section*{Acknowledgements}
 This work was supported through National Science Foundation grant EAR-1246670
